# AndroidLowLevelDetector

./: .gitignore  CHANGELOG.md  GOOGLE_PLAY_PRIVACY_POLICY.md  JOTTINGS.md  LICENSE  README.md  SECURITY.md  build.gradle  build.gradle.kts  buildScriptConfig.gradle  gradle.properties  gradlew  settings.gradle  settings.gradle.kts
app/: CMakeLists.txt  build.gradle  build.gradle.kts  dependencies.gradle  keysConfig.gradle  proguard-firebase-rules.pro  proguard-gson-rules.pro  proguard-rules-kotlinx-serialization-json.pro  proguard-rules.pro
app/src/debug/: AndroidManifest.xml
app/src/debug/res/values/: strings.xml
app/src/debug/res/values-zh-rCN/: strings.xml
app/src/main/: AndroidManifest.xml
app/src/main/assets/: lld.json
app/src/main/cpp/: BinderDetector.cpp  BinderDetector.h  CMakeLists.txt
app/src/main/res/anim/: drop_scale.xml
app/src/main/res/drawable/: ic_access_time_black_24dp.xml  ic_adb_black_24dp.xml  ic_baseline_prop_24.xml  ic_code_black_24dp.xml  ic_copyright_black_24dp.xml  ic_delete_forever_black_24dp.xml  ic_format_list_bulleted_black_24dp.xml  ic_home_black_24dp.xml  ic_launcher_foreground.xml  ic_more_horizontal_black_24dp.xml  ic_network_wifi_black_24dp.xml  ic_others_24dp.xml  ic_others_black_24dp.xml  ic_prop_24dp.xml  ic_settings_24dp.xml  ic_settings_black_24dp.xml  ic_shop_black_24dp.xml  ic_system_update_black_24dp.xml  ic_translate_black_24dp.xml  scroll_thumb_drawable.xml  selector_bottom_navigation_view.xml
app/src/main/res/layout/: fragment_list.xml  fragment_list_item.xml  home_fragment.xml  main_activity.xml  (+3 more)
(+273 files in other folders)
